[gd_scene load_steps=58 format=2]

[ext_resource path="res://assets/fonts/simsun.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/images/ui/windowcommon/Panel.png" type="Texture" id=2]
[ext_resource path="res://assets/images/design/人物和背包.jpg" type="Texture" id=3]
[ext_resource path="res://assets/images/ui/window_title_accessory/9.png" type="Texture" id=4]
[ext_resource path="res://assets/images/ui/windowcommon/windowtitle1.png" type="Texture" id=5]
[ext_resource path="res://assets/images/ui/status_bag/profile-1.png" type="Texture" id=6]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon1.png" type="Texture" id=7]
[ext_resource path="res://src/scenes/UI/status/StatusItem.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon2.png" type="Texture" id=9]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon4.png" type="Texture" id=10]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon3.png" type="Texture" id=11]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon5.png" type="Texture" id=12]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon9.png" type="Texture" id=13]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon7.png" type="Texture" id=14]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon6.png" type="Texture" id=15]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon8.png" type="Texture" id=16]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon11.png" type="Texture" id=17]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon10.png" type="Texture" id=18]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon12.png" type="Texture" id=19]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon13.png" type="Texture" id=20]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon17.png" type="Texture" id=21]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon16.png" type="Texture" id=22]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon14.png" type="Texture" id=23]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon18.png" type="Texture" id=24]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon19.png" type="Texture" id=25]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon21.png" type="Texture" id=26]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon20.png" type="Texture" id=27]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon22.png" type="Texture" id=28]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon23.png" type="Texture" id=29]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon24.png" type="Texture" id=30]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon26.png" type="Texture" id=31]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon27.png" type="Texture" id=32]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon25.png" type="Texture" id=33]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon28.png" type="Texture" id=34]
[ext_resource path="res://assets/images/ui/status_bag/profile_icon29.png" type="Texture" id=35]
[ext_resource path="res://src/component/theme/vscrollbar.tres" type="Theme" id=36]
[ext_resource path="res://assets/fonts/DroidSansChinese.ttf" type="DynamicFontData" id=37]
[ext_resource path="res://assets/images/ui/windowcommon/29.png" type="Texture" id=38]
[ext_resource path="res://assets/images/ui/windowcommon/31.png" type="Texture" id=39]
[ext_resource path="res://assets/images/ui/windowcommon/32.png" type="Texture" id=40]
[ext_resource path="res://src/scripts/UI/Status.gd" type="Script" id=41]
[ext_resource path="res://assets/images/ui/windowcommon/70.png" type="Texture" id=42]
[ext_resource path="res://assets/images/ui/windowcommon/277.png" type="Texture" id=43]
[ext_resource path="res://assets/images/ui/windowcommon/278.png" type="Texture" id=44]
[ext_resource path="res://assets/images/ui/windowcommon/276.png" type="Texture" id=45]
[ext_resource path="res://assets/images/ui/windowcommon/279.png" type="Texture" id=46]
[ext_resource path="res://src/scripts/com/DraggableBar.gd" type="Script" id=47]
[ext_resource path="res://assets/sounds/ui/click1.wav" type="AudioStream" id=48]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 2 )
region_rect = Rect2( 0, 0, 104, 111 )
margin_left = 10.0
margin_right = 10.0
margin_top = 10.0
margin_bottom = 10.0

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 37 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 39 )
region_rect = Rect2( 0, 0, 60, 21 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 39 )
region_rect = Rect2( 0, 0, 60, 21 )

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 39 )
region_rect = Rect2( 0, 0, 60, 21 )

[sub_resource type="StyleBoxTexture" id=7]
texture = ExtResource( 38 )
region_rect = Rect2( 0, 0, 60, 20 )
margin_left = 6.0
margin_right = 6.0

[sub_resource type="DynamicFont" id=8]
outline_size = 1
outline_color = Color( 0.168627, 0.168627, 0.168627, 1 )
font_data = ExtResource( 37 )

[sub_resource type="StyleBoxTexture" id=9]
texture = ExtResource( 40 )
region_rect = Rect2( 0, 0, 60, 20 )

[node name="Status" type="Control"]
margin_left = 31.0
margin_top = 88.0
margin_right = 394.0
margin_bottom = 546.0
mouse_filter = 2
script = ExtResource( 41 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="人物和背包" type="Sprite" parent="."]
visible = false
position = Vector2( -29.3995, -88.1989 )
texture = ExtResource( 3 )
centered = false

[node name="Panel" type="Panel" parent="."]
margin_left = 8.0
margin_top = 17.0
margin_right = 359.0
margin_bottom = 458.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="windowtitle" type="NinePatchRect" parent="."]
margin_right = 364.0
margin_bottom = 39.0
mouse_filter = 1
texture = ExtResource( 5 )
patch_margin_left = 100
patch_margin_right = 50
script = ExtResource( 47 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="windowtitle"]
anchor_top = -0.024202
anchor_bottom = -0.024202
margin_left = 4.0
margin_top = 10.9439
margin_right = 362.0
margin_bottom = 33.9439
custom_fonts/font = SubResource( 2 )
text = "个人信息(M)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="t_acc" type="TextureRect" parent="."]
margin_left = 3.30763
margin_top = 6.92966
margin_right = 33.3076
margin_bottom = 36.9297
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="profile-1" type="Sprite" parent="."]
position = Vector2( 183.903, 261.448 )
texture = ExtResource( 6 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 21.0
margin_top = 190.0
margin_right = 346.0
margin_bottom = 367.0
theme = ExtResource( 36 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="ColorRect" parent="ScrollContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 310.0
margin_bottom = 334.0
rect_min_size = Vector2( 310, 334 )

[node name="hpItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]

[node name="nameLabel" parent="ScrollContainer/Control/hpItem" index="0"]
text = "HP"

[node name="valueLabel" parent="ScrollContainer/Control/hpItem" index="1"]
text = "0"

[node name="mpItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 0 )

[node name="nameLabel" parent="ScrollContainer/Control/mpItem" index="0"]
text = "MP"

[node name="icon" parent="ScrollContainer/Control/mpItem" index="2"]
texture = ExtResource( 7 )

[node name="STRItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 21.1893 )

[node name="nameLabel" parent="ScrollContainer/Control/STRItem" index="0"]
text = "力量"

[node name="valueLabel" parent="ScrollContainer/Control/STRItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/STRItem" index="2"]
texture = ExtResource( 9 )

[node name="WISItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 21.1893 )

[node name="nameLabel" parent="ScrollContainer/Control/WISItem" index="0"]
text = "智力"

[node name="icon" parent="ScrollContainer/Control/WISItem" index="2"]
texture = ExtResource( 11 )

[node name="VITItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 44.4975 )

[node name="nameLabel" parent="ScrollContainer/Control/VITItem" index="0"]
text = "体力"

[node name="valueLabel" parent="ScrollContainer/Control/VITItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/VITItem" index="2"]
texture = ExtResource( 10 )

[node name="MNDItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 44.4975 )

[node name="nameLabel" parent="ScrollContainer/Control/MNDItem" index="0"]
text = "精神"

[node name="icon" parent="ScrollContainer/Control/MNDItem" index="2"]
texture = ExtResource( 12 )

[node name="physical_attackItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 66.7699 )

[node name="nameLabel" parent="ScrollContainer/Control/physical_attackItem" index="0"]
text = "物理攻击"

[node name="valueLabel" parent="ScrollContainer/Control/physical_attackItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/physical_attackItem" index="2"]
texture = ExtResource( 15 )

[node name="magical_attackItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 66.7699 )

[node name="nameLabel" parent="ScrollContainer/Control/magical_attackItem" index="0"]
text = "魔法攻击"

[node name="icon" parent="ScrollContainer/Control/magical_attackItem" index="2"]
texture = ExtResource( 14 )

[node name="physical_defenseItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 88.6333 )

[node name="nameLabel" parent="ScrollContainer/Control/physical_defenseItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "物理防御"

[node name="valueLabel" parent="ScrollContainer/Control/physical_defenseItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/physical_defenseItem" index="2"]
texture = ExtResource( 16 )

[node name="magical_defenseItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 88.6333 )

[node name="nameLabel" parent="ScrollContainer/Control/magical_defenseItem" index="0"]
text = "魔法防御"

[node name="icon" parent="ScrollContainer/Control/magical_defenseItem" index="2"]
texture = ExtResource( 13 )

[node name="physical_criticalItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 110.917 )

[node name="nameLabel" parent="ScrollContainer/Control/physical_criticalItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "物理暴击"

[node name="valueLabel" parent="ScrollContainer/Control/physical_criticalItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/physical_criticalItem" index="2"]
texture = ExtResource( 18 )

[node name="magical_criticalItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 110.917 )

[node name="nameLabel" parent="ScrollContainer/Control/magical_criticalItem" index="0"]
text = "魔法暴击"

[node name="icon" parent="ScrollContainer/Control/magical_criticalItem" index="2"]
texture = ExtResource( 17 )

[node name="attack_speedItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 133.201 )

[node name="nameLabel" parent="ScrollContainer/Control/attack_speedItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "攻击速度"

[node name="valueLabel" parent="ScrollContainer/Control/attack_speedItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/attack_speedItem" index="2"]
texture = ExtResource( 19 )

[node name="cast_speedItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 133.201 )

[node name="nameLabel" parent="ScrollContainer/Control/cast_speedItem" index="0"]
text = "施放速度"

[node name="icon" parent="ScrollContainer/Control/cast_speedItem" index="2"]
texture = ExtResource( 20 )

[node name="move_speedItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 156.746 )

[node name="nameLabel" parent="ScrollContainer/Control/move_speedItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "移动速度"

[node name="valueLabel" parent="ScrollContainer/Control/move_speedItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/move_speedItem" index="2"]
texture = ExtResource( 23 )

[node name="stuckItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 179.45 )

[node name="nameLabel" parent="ScrollContainer/Control/stuckItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "命中率"

[node name="valueLabel" parent="ScrollContainer/Control/stuckItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/stuckItem" index="2"]
texture = ExtResource( 22 )

[node name="stuck_resistanceItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 179.45 )

[node name="nameLabel" parent="ScrollContainer/Control/stuck_resistanceItem" index="0"]
text = "回避率"

[node name="icon" parent="ScrollContainer/Control/stuck_resistanceItem" index="2"]
texture = ExtResource( 21 )

[node name="hp_regen_speedItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 201.723 )

[node name="nameLabel" parent="ScrollContainer/Control/hp_regen_speedItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "HP恢复量"

[node name="valueLabel" parent="ScrollContainer/Control/hp_regen_speedItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/hp_regen_speedItem" index="2"]
texture = ExtResource( 24 )

[node name="mp_regen_speedItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 201.723 )

[node name="nameLabel" parent="ScrollContainer/Control/mp_regen_speedItem" index="0"]
text = "MP恢复量"

[node name="icon" parent="ScrollContainer/Control/mp_regen_speedItem" index="2"]
texture = ExtResource( 25 )

[node name="immobilityItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 223.995 )

[node name="nameLabel" parent="ScrollContainer/Control/immobilityItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "僵直度"

[node name="valueLabel" parent="ScrollContainer/Control/immobilityItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/immobilityItem" index="2"]
texture = ExtResource( 27 )

[node name="hit_recoveryItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 223.995 )

[node name="nameLabel" parent="ScrollContainer/Control/hit_recoveryItem" index="0"]
text = "硬直"

[node name="icon" parent="ScrollContainer/Control/hit_recoveryItem" index="2"]
texture = ExtResource( 26 )

[node name="fire_attackItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 246.268 )

[node name="nameLabel" parent="ScrollContainer/Control/fire_attackItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "火属性强化"

[node name="valueLabel" parent="ScrollContainer/Control/fire_attackItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/fire_attackItem" index="2"]
texture = ExtResource( 28 )

[node name="fire_resistanceItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 246.268 )

[node name="nameLabel" parent="ScrollContainer/Control/fire_resistanceItem" index="0"]
text = "火属性抗性"

[node name="icon" parent="ScrollContainer/Control/fire_resistanceItem" index="2"]
texture = ExtResource( 29 )

[node name="water_attackItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 268.985 )

[node name="nameLabel" parent="ScrollContainer/Control/water_attackItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "冰属性强化"

[node name="valueLabel" parent="ScrollContainer/Control/water_attackItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/water_attackItem" index="2"]
texture = ExtResource( 30 )

[node name="water_resistanceItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 268.985 )

[node name="nameLabel" parent="ScrollContainer/Control/water_resistanceItem" index="0"]
text = "冰属性抗性"

[node name="icon" parent="ScrollContainer/Control/water_resistanceItem" index="2"]
texture = ExtResource( 33 )

[node name="light_attackItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 291.703 )

[node name="nameLabel" parent="ScrollContainer/Control/light_attackItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0

[node name="valueLabel" parent="ScrollContainer/Control/light_attackItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/light_attackItem" index="2"]
texture = ExtResource( 31 )

[node name="light_resistanceItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 291.703 )

[node name="nameLabel" parent="ScrollContainer/Control/light_resistanceItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "光属性抗性"

[node name="icon" parent="ScrollContainer/Control/light_resistanceItem" index="2"]
texture = ExtResource( 32 )

[node name="dark_attackItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 0, 313.53 )

[node name="nameLabel" parent="ScrollContainer/Control/dark_attackItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "暗属性强化"

[node name="valueLabel" parent="ScrollContainer/Control/dark_attackItem" index="1"]
text = "0"

[node name="icon" parent="ScrollContainer/Control/dark_attackItem" index="2"]
position = Vector2( 0, -0.8909 )
texture = ExtResource( 34 )

[node name="dark_resistanceItem" parent="ScrollContainer/Control" instance=ExtResource( 8 )]
position = Vector2( 157.065, 313.53 )

[node name="nameLabel" parent="ScrollContainer/Control/dark_resistanceItem" index="0"]
margin_left = 19.0
margin_right = 99.0
margin_bottom = 16.0
text = "暗属性抗性"

[node name="icon" parent="ScrollContainer/Control/dark_resistanceItem" index="2"]
texture = ExtResource( 35 )

[node name="ex_job_des" type="Label" parent="."]
margin_left = 22.1588
margin_top = 377.606
margin_right = 70.1588
margin_bottom = 394.606
custom_fonts/font = SubResource( 3 )
text = "副职业"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ex_job" type="Label" parent="."]
margin_left = 188.0
margin_top = 378.0
margin_right = 343.0
margin_bottom = 395.0
custom_fonts/font = SubResource( 3 )
text = "无"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pvp_des" type="Label" parent="."]
margin_left = 22.1588
margin_top = 401.106
margin_right = 70.1588
margin_bottom = 418.106
custom_fonts/font = SubResource( 3 )
text = "决斗"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pvp" type="Label" parent="."]
margin_left = 188.0
margin_top = 401.5
margin_right = 343.0
margin_bottom = 418.5
custom_fonts/font = SubResource( 3 )
text = "0胜 0败 (0.00%)"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cof_des" type="Label" parent="."]
margin_left = 22.1588
margin_top = 424.106
margin_right = 70.1588
margin_bottom = 441.106
custom_fonts/font = SubResource( 3 )
text = "COF指数          0.00%"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="qx" type="Label" parent="."]
margin_left = 188.0
margin_top = 424.5
margin_right = 343.0
margin_bottom = 441.5
custom_fonts/font = SubResource( 3 )
text = "无法倾向                 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="roleBtn" type="Button" parent="."]
margin_left = 20.0
margin_top = 47.0
margin_right = 92.0
margin_bottom = 70.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.902344, 0.885895, 0.852997, 1 )
toggle_mode = true
text = "角色"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fashineBtn" type="Button" parent="."]
margin_left = 94.0
margin_top = 47.0
margin_right = 212.0
margin_bottom = 70.0
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 5 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.902344, 0.885895, 0.852997, 1 )
text = "妆扮及宠物"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="line" type="Sprite" parent="."]
position = Vector2( 13, 67 )
scale = Vector2( 5.68288, 1 )
texture = ExtResource( 42 )
centered = false

[node name="closeBtn" type="TextureButton" parent="."]
margin_left = 341.193
margin_top = 14.4486
margin_right = 357.193
margin_bottom = 30.4486
texture_normal = ExtResource( 45 )
texture_pressed = ExtResource( 44 )
texture_hover = ExtResource( 43 )
texture_disabled = ExtResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="windowSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 48 )

[connection signal="visibility_changed" from="." to="." method="_on_Status_visibility_changed"]
[connection signal="pressed" from="closeBtn" to="." method="_on_closeBtn_pressed"]

[editable path="ScrollContainer/Control/hpItem"]
[editable path="ScrollContainer/Control/mpItem"]
[editable path="ScrollContainer/Control/STRItem"]
[editable path="ScrollContainer/Control/WISItem"]
[editable path="ScrollContainer/Control/VITItem"]
[editable path="ScrollContainer/Control/MNDItem"]
[editable path="ScrollContainer/Control/physical_attackItem"]
[editable path="ScrollContainer/Control/magical_attackItem"]
[editable path="ScrollContainer/Control/physical_defenseItem"]
[editable path="ScrollContainer/Control/magical_defenseItem"]
[editable path="ScrollContainer/Control/physical_criticalItem"]
[editable path="ScrollContainer/Control/magical_criticalItem"]
[editable path="ScrollContainer/Control/attack_speedItem"]
[editable path="ScrollContainer/Control/cast_speedItem"]
[editable path="ScrollContainer/Control/move_speedItem"]
[editable path="ScrollContainer/Control/stuckItem"]
[editable path="ScrollContainer/Control/stuck_resistanceItem"]
[editable path="ScrollContainer/Control/hp_regen_speedItem"]
[editable path="ScrollContainer/Control/mp_regen_speedItem"]
[editable path="ScrollContainer/Control/immobilityItem"]
[editable path="ScrollContainer/Control/hit_recoveryItem"]
[editable path="ScrollContainer/Control/fire_attackItem"]
[editable path="ScrollContainer/Control/fire_resistanceItem"]
[editable path="ScrollContainer/Control/water_attackItem"]
[editable path="ScrollContainer/Control/water_resistanceItem"]
[editable path="ScrollContainer/Control/light_attackItem"]
[editable path="ScrollContainer/Control/light_resistanceItem"]
[editable path="ScrollContainer/Control/dark_attackItem"]
[editable path="ScrollContainer/Control/dark_resistanceItem"]
